--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
+    "debug": "^4.1.1",
     "express": "~4.16.0",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
+    "less-loader": "^5.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
-    "webpack-images-resizer": "^0.1.2",
-    "copy-webpack-plugin": "^5.0.3"
+    "sharp": "^0.22.1"
   }
 }
