--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "font-awesome": "^4.7.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "sharp": "^0.22.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
-    "sharp": "^0.22.1"
+    "npm-font-open-sans": "^1.1.0"
   }
 }
