--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
+    "@intervolga/optimize-cssnano-plugin": "^1.0.6",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -23,11 +24,11 @@
     "font-awesome": "^4.7.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "npm-font-open-sans": "^1.1.0",
     "sharp": "^0.22.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "npm-font-open-sans": "^1.1.0"
+    "webpack-cli": "^3.3.1"
   }
 }
