--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
+    "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
