--- a/package.json
+++ b/package.json
@@ -3,17 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "build": "npm install > ./install.log & npm run webpack & npm run build-images & start http://localhost:3000/ & npm start",
+    "start": "start ./public/index.html",
+    "build": "npm install > ./install.log & npm run webpack & npm run build-images & npm start",
     "build-images": "node ./bin/resize-images.js >> ./install.log",
     "webpack": " webpack --progress --mode production >> ./install.log ",
     "dev": "webpack --progress --watch"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "^4.1.1",
-    "express": "~4.16.0",
-    "morgan": "~1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
